<resources>
    <string name="app_name">TwoToucMail</string>
    <string name="button_Pickup">むかえにきて</string>
    <string name="button_no_dinner">めしいらない</string>
    <string name="button_send">送信</string>
　　 <string name="subject">件名</string>
    <string name="place">場所</string>
    <string name="station">駅</string>
    <string name="school">学校</string>
　　 <string name="always">いつもの場所</string>
    <string name="mail_to1">yoshiyuki.8382129@docomo.ne.jpcom</string>
    <string name="mail_to2">yoshiyuki.8382129@iCloud.com</string>
    <string name="mail_to3">yoshiyuki1074129@yahoo.co.jp</string>


</resources>
